<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- IMAGE VIEW FIREBASE OC -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo_auth"
            android:layout_margin="@dimen/default_large_margin"/>

        <!-- TITLE FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/default_margin"/>

        <!-- DESCRIPTION FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/main_activity_description"
            android:layout_margin="@dimen/default_margin"/>
    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_large_margin"
        android:layout_below="@+id/firstLayout"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nom d'utilisateur" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mot de passe"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- BUTTON LOGIN -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:background="@drawable/button_radius_accent_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/default_large_margin"
            android:padding="@dimen/default_large_margin"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Vous n'avez pas de compte ?" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />



        <!-- BUTTON LOGIN -->
        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="S'Inscrire"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size"
            android:background="@drawable/button_radius_primary_color"
            style="?android:attr/borderlessButtonStyle"
            android:layout_margin="@dimen/default_large_margin"
            android:padding="@dimen/default_large_margin"/>


    </LinearLayout>

</RelativeLayout>
